added register form

--- a/index.html
+++ b/index.html
@@ -28,9 +28,41 @@
             <br>
             <div class="signbtn">
            <a href="www.maseno.ac.ke">Sign In</a>
-           </div> 
+           </div>
+        </form>
+        <form id="form">
+            <div class="registration-form">
+
+ <label for="name" id="label-name">Name</label>
+  <input type="text" id="name" placeholder="Enter your name">
+ <br>
+ <label for="email" id="label-email">email adress</label>
+ <input type="text" id="name" placeholder="Enter your email">
+<br>
+    <label for="age" id="label-age">Age</label>
+<input type="text"
+           id="age"
+           placeholder="Enter your age">
+           <br>
+
+    <label for="yos" id="yos">Year of study</label>
+     
+    <select>
+        <option value="first year">first year</option>
+         <option value="second year">second year</option>
+        <option value="third year">third year</option>
+        <option value="fourth year">fourth year</option>
+        </select>
+    <button type="submit" id="button"></button>
+    <input type="button" value="submit"</input>
+    
+</div>
+
+
+            </div>
         </form>
 </div>
+
 </div>
 </body>
 </HTML>
