--- a/images/Dashboard.html
+++ b/images/Dashboard.html
@@ -5,11 +5,12 @@
     <title>student|dashboard</title>
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, " name="viewport">
  <link rel="stylesheet" href="css/mystyle.css">
+<link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
   <body>
     <section id="body"class="mybody">
-            <img src=" images/maseno1.jpg"  class="myimg">
+            <img src=" images/masenologo.png"  class="myimg">
 <nav>
  <div  class="sidenav">
   <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
@@ -19,6 +20,7 @@
 </div>
 </nav>
 </section>
+
 </body>
 </HTML>
 
